Improved viewing on mobile devices. Fixed issues transitioning from mobile to desktop size.

--- a/RockWeb/Themes/church_ccv_External_v8/Styles/theme.css
+++ b/RockWeb/Themes/church_ccv_External_v8/Styles/theme.css
@@ -10801,9 +10801,14 @@ html,body{
    margin-top: 1.78rem;
    margin-bottom: 25px;
    height: auto;
+   max-height: 1024px;
    width: auto;
    max-width: 380px;
 }
+
+/*.event-detail-card-animation {
+   transition: max-height .5s, padding .5s, transform .5s;
+}*/
 
 @media screen and (min-width: 1224px) {
    .event-detail-card {
@@ -10814,6 +10819,12 @@ html,body{
       width: 50%;
    }
 }
+
+/*.event-detail-card-hidden {
+   transform: scaleY(0);
+   padding: 0px;
+   max-height: 0px;
+}*/
 
 .event-detail-card h6 {
 	color: #7A1315;
